--- a/src/components/notepad/NotesHomepage.css
+++ b/src/components/notepad/NotesHomepage.css
@@ -1,6 +1,6 @@
 .note-container {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: 92%;
   background-color: #ffffff;
   border-radius: 10px;
   padding: 10px;
