--- a/src/components/notepad/NotesHomepage.css
+++ b/src/components/notepad/NotesHomepage.css
@@ -5,3 +5,57 @@
   border-radius: 10px;
   padding: 10px;
 }
+button {
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 8px 20px;
+  background-color: #ffffff;
+  border-color: #ccc;
+  border-style: solid;
+  margin-right: 5px;
+  height: fit-content;
+  width: fit-content;
+}
+.delete {
+  background-color: #ec3646;
+  border-color: #ec3646;
+}
+.add {
+  background-color: #57b93e;
+  border-color: #57b93e;
+}
+.save {
+  background-color: #39acdc;
+  border-color: #39acdc;
+}
+input {
+  font-size: 12px;
+  line-height: 250%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  border-color: #ccc;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+}
+.notepad-title {
+  font-size: 12px;
+}
+.controls {
+  float: right;
+  margin-top: 30px;
+}
+.my-note {
+  font-size: 18px;
+}
+.notepad-input {
+  width: 40%;
+}
+.note-list {
+  display: flex;
+}
+@media screen and (max-width: 800px) {
+  .note-list {
+    display: block;
+  }
+}
